# svd_demo

./: CMakeLists.txt  README.md  build.sh  test.txt
eigen3/Eigen/src/Core/: DenseCoeffsBase.h
eigen_demo/: CMakeLists.txt  test.cpp
eigen_demo2/: CMakeLists.txt  eitcap_pca.cpp  eitcap_pca.h  main.cpp
omp_demo/: CMakeLists.txt  omp_demo.cpp
svd/: CMakeLists.txt  pca.c  sdvcmp.c  svdtest.c
